--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-        <img src = "./assets/burger.png" alt = "burger">
+    
         
     <h1>Eat Da Burger</h1>
 
 
 
-    <h2 id="search">Name a Burger!</h2>
+    <h2 id="search">Which Burger Is It?</h2>
     <form class="addburger">
         <input type="text" name="burger_name" value id="burger_name">
         <button type="submit"  id="enter-button">Make that Burger!</button>
@@ -27,7 +27,7 @@
 
     <h2>Devour, Delete, Repeat</h2>
 
-    <h3> To be Devoured </h3>
+    <h3> Still On The Plate</h3>
     <ul id="notdev"></ul>
 
 
