--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat da burger</title>
-    <link rel="stylesheet" href="./assets/burger_style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="./assets/burgers.js"></script>
 
@@ -19,7 +18,7 @@
 
 
 
-    <h2 id="search">Which Burger Is It?</h2>
+    <h2 id="search">Burger Name!</h2>
     <form class="addburger">
         <input type="text" name="burger_name" value id="burger_name">
         <button type="submit"  id="enter-button">Make that Burger!</button>
@@ -27,7 +26,7 @@
 
     <h2>Devour, Delete, Repeat</h2>
 
-    <h3> Still On The Plate</h3>
+    <h3> To be Devoured </h3>
     <ul id="notdev"></ul>
 
 
