--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-    <title>Eat Da Burger</title>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eat-Da-Burger</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-  </head>
-  <body class="back">
-    <h1 class="eat">Eat Da Burger</h1>
-    <h2 class="veggie">Variety of Veggie Burgers</h2>
+    <link rel="stylesheet" style="style/css" href="./assets/css/burger_style.css">
+    <script src="/assets/js/burgers.js"></script>
+</head>
 
-  
+<body>
+    <h1> Eat-Da-Burger </h1>
+        <h2>Name of Burger</h2>
+        <form id="addBurger">
+            <input class="form-control form-control-lg" type="text" name="burger"
+                style="margin-left: 90px; margin-right: 40px;">
+            <button type="submit" class="btn btn-danger danger" style="height: 60px; width: 100px;">Submit</button>
+        </form>
+        <h3>Eat and Delete</h3>
+        <div class="row">
+            <div class="col-sm-6 submitted">
+                <ul id="submittedBurgers"></ul>
+            </div>
+            <div class="col-sm-6 devoured">
+                <ul id="devouredBurgers"></ul>
+            </div>
+        </div>
 
-    <form class="create-form">
-      <div class="form-group">
-        <button type="submit">Add A Burger</button>
-        <input type="text" id="food" name="name" />
-      </div>
-    </form>
 
-    <h3>Devour</h3>
-    <ul id="burger-list"></ul>
+</body>
 
-    <h3>Delete</h3>
-    <ul id="eaten-list"></ul>
-    <script src="/assets/js/burger.js"></script>
-  </body>
 </html>
