--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <body>
     <h1> Eat-Da-Burger </h1>
         <h2>Name of Burger</h2>
-        <form id="addBurger">
-            <input class="form-control form-control-lg" type="text" name="burger"
+        <form id="Age">
+            <input class="form-control form-control-lg" type="text" name="Age"
                 style="margin-left: 90px; margin-right: 40px;">
             <button type="submit" class="btn btn-danger danger" style="height: 60px; width: 100px;">Submit</button>
         </form>
