--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eat-Da-Burger</title>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <link rel="stylesheet" style="style/css" href="./assets/css/burger_style.css">
-    <script src="/assets/js/burgers.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
-    <h1> Eat-Da-Burger </h1>
-        <h2>Name of Burger</h2>
-        <form id="Age">
-            <input class="form-control form-control-lg" type="text" name="Age"
-                style="margin-left: 90px; margin-right: 40px;">
-            <button type="submit" class="btn btn-danger danger" style="height: 60px; width: 100px;">Submit</button>
-        </form>
-        <h3>Eat and Delete</h3>
+    <div class="headContainer">
+        <h1>Eat A Burger</h1>
+        
+    </div>
+
+
+
+
+
+    <form class="create-form">
+        <div class="form-group">
+        <input type="text" name="burger" id="burgerData" placeholder="Name of Burger You'd Like to Chomp"
+            id="burgerData" />
+        <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+    </div>
+    </form>
+
+    <div class="container">
+        <h2>Gotta Eat These</h2>
         <div class="row">
-            <div class="col-sm-6 submitted">
-                <ul id="submittedBurgers"></ul>
+            <div class="col-md-6" id="undevoured">
+                <div class="row-burger-row">
+                    <div class="col-md-9 text-center">
+                        <ul id="notEatenBurgers"></ul>
+                        <!--where the database id value and burger_name will show-->
+                    </div>
+                    <div class="col-md-3 text-center">
+
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6 devoured">
-                <ul id="devouredBurgers"></ul>
+
+
+
+
+
+
+
+            <h2>You Finished These Now Delete Them</h2>
+            <div class="col-md-6" id="devoured">
+                <div class="row-burger-row">
+                    <div class="col-md-9 text-center">
+                        <ul id="eatenBurgers"></ul>
+                        <!--where the database id value and burger_name will show-->
+                    </div>
+                    <div class="col-md-3 text-center">
+
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/burgers.js"></script>
 </body>
 
 </html>
